# rl-sim-to-real-workshop

./: .gitignore  README.md  pyproject.toml
specs/001-ppo-skeleton/: brainstorm.md  data-model.md  decisions.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ppo-skeleton/checklists/: requirements.md
specs/001-ppo-skeleton/contracts/: agent-interface.md  test-runner-cli.md  todo-functions.md
specs/002-training-and-visualization/: brainstorm.md  data-model.md  decisions.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-training-and-visualization/checklists/: requirements.md
specs/002-training-and-visualization/contracts/: cli.md  run-format.md
specs/003-fix-mountaincar-train/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fix-mountaincar-train/checklists/: requirements.md
specs/003-fix-mountaincar-train/contracts/: agent-api.md  cli.md  tests.md
specs/004-fix-mps-device/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-carracing-drivers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
workshop-1/: README.md  _eval.py  _log_parser.py  _runlog.py  _sb3_jsonl_callback.py
workshop-1/1-ppo/: ppo.py  ppo_skeleton.py  test_agent_interface.py  test_ppo.py
workshop-1/2-mountaincar/: agent.py  analyze.ipynb  train.py  train_sb3.py
workshop-1/2-pendulum/: train.py  train_sb3.py
workshop-1/3-car-racing/: README.md  _huggingface.py  agent.py  analyze.ipynb  train.py  train_sb3.py
workshop-2/: README.md
(+18 files in other folders)
